Fixed z-index of modal bg

--- a/client/src/SASS/ProjectForm.scss
+++ b/client/src/SASS/ProjectForm.scss
@@ -24,7 +24,7 @@
       top: 0;
       text-align: center;
       width: 100%;
-      z-index: 99999;
+      z-index: 9999999;
       .delete-project-modal {
         max-width: 489px;
         width: 489px;
